Fix operation overflow text

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ body {
     display: flex;
     justify-content: start;
     gap: 10px;
+    overflow-wrap: anywhere;
 }
 
 .typer #operation sup {
